# deep-capture

./: .gitignore  CMakeLists.txt  README.md  build.sh
example/: CMakeLists.txt  mac-main.mm
examples/: CMakeLists.txt
examples/mac-main/: CMakeLists.txt  mac-main.mm
examples/one-frame/: CMakeLists.txt
examples/yolo-screen/: CMakeLists.txt  main.py  yolo_tf.py
include/: DeepCapture.h  MacDisplayCapture.h  PixelBuffer.h
scripts/: test.py
src/: DeepCapture.cpp  MacDisplayCapture.mm
swig/: CMakeLists.txt  DeepCapture.i  setup.py
